...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="hW4-pb-8TH">
            <objects>
                <windowController id="RHq-9Z-auA" customClass="OneWindowController" customModule="Meridian" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Juk-wd-881">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="245" y="301" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                        <accessibility identifier="Meridian"/>
...
</string>
                                </buttonCell>
                                <constraints>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="80" id="Ikc-5C-yOA"/>
                                    <constraint firstAttribute="height" constant="20" id="TRi-p5-6gR"/>
                                </constraints>
                                <accessibility identifier="AddAvailableTimezone"/>
                                <connections>
                                    <action selector="addToFavorites:" target="ZT5-cA-xLj" id="GAu-wJ-aEf"/>
                                </connections>
                            </button>
                            <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="32" horizontalPageScroll="10" verticalLineScroll="32" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wY-ff-FLW">
                                <rect key="frame" x="8" y="30" width="320" height="237"/>
...
                                                    <font key="font" metaFont="system" size="22"/>
                                                </buttonCell>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="40" id="TJZ-Zv-ft0"/>
                                                    <constraint firstAttribute="height" constant="40" id="sK8-9i-bBo"/>
                                                </constraints>
                                                <accessibility identifier="AddTimezone"/>
                                                <connections>
                                                    <action selector="addTimeZone:" target="ZT5-cA-xLj" id="FMa-3W-muR"/>
                                                </connections>
                                            </button>
                                            <button toolTip="Remove a timezone" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="48a-Zz-oQg">
                                                <rect key="frame" x="41" y="6" width="40" height="40"/>
...
                                                    <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                                    <font key="font" metaFont="system" size="22"/>
                                                    <string key="keyEquivalent" base64-UTF8="YES">
CA
</string>
                                                </buttonCell>
                                                <accessibility identifier="DeleteTimezone"/>
                                                <connections>
                                                    <action selector="removeFromFavourites:" target="ZT5-cA-xLj" id="T60-na-pMd"/>
                                                </connections>
                                            </button>
                                            <customView focusRingType="none" appearanceType="aqua" translatesAutoresizingMaskIntoConstraints="NO" id="PbD-dt-goz" customClass="ShortcutRecorderButton" customModule="Meridian" customModuleProvider="target">
                                                <rect key="frame" x="426" y="14" width="180" height="25"/>
...
