...
        emoji.isBordered = false
        emoji.isEditable = false
        emoji.focusRingType = .none
        emoji.alignment = .center
        emoji.font = NSFont.systemFont(ofSize: 100)
        emoji.backgroundColor = .clear
        emoji.setAccessibilityIdentifier("NoTimezoneEmoji")
        return emoji
    }()

    private lazy var message: NSTextField = {
        let messageField = NSTextField(frame: NSRect(x: frame.size.width / 2 - 250,
                                                     y: frame.size.height / 2 - 275,
                                                     width: 500,
                                                     height: 200))
        messageField.wantsLayer = true
        messageField.setAccessibilityIdentifier("NoTimezoneMessage")
        messageField.placeholderString = NSLocalizedString("No places added",
                                                           comment: "Subtitle for no places added")
        messageField.stringValue = NSLocalizedString("No places added",
                                                     comment: "Subtitle for no places added")
        messageField.isBordered = false
        messageField.isEditable = false
...
