...
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="PanelController" customModule="Meridian" customModuleProvider="target">
            <connections>
                <outlet property="backgroundView" destination="6" id="20"/>
                <outlet property="goBackwardsButton" destination="aW8-hr-4Zh" id="EWT-EA-AGP"/>
                <outlet property="goForwardButton" destination="Bmz-Z2-OvH" id="6bR-Ph-Nit"/>
                <outlet property="mainTableView" destination="dFw-ts-8OZ" id="2kY-dd-rDV"/>
                <outlet property="modernContainerView" destination="8W7-rS-Uob" id="qgZ-SS-ayy"/>
                <outlet property="modernSlider" destination="lxA-64-3QU" id="kS5-ub-7gV"/>
                <outlet property="modernSliderLabel" destination="e2d-EI-Dm0" id="eby-rL-B21"/>
                <outlet property="resetModernSliderButton" destination="TK5-db-7bd" id="Mie-WC-5YN"/>
                <outlet property="scrollViewHeight" destination="dff-DX-W1o" id="vYe-lb-h9x"/>
                <outlet property="settingsButton" destination="1cR-pI-osG" id="ZFz-9l-yNi"/>
...
                                                                        <font key="font" metaFont="system"/>
                                                                    </buttonCell>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="80" id="bRv-Of-5l3"/>
                                                                        <constraint firstAttribute="width" constant="80" id="cRC-Fx-WLR"/>
                                                                    </constraints>
                                                                    <accessibility identifier="EmptyAddTimezone"/>
                                                                    <connections>
                                                                        <action selector="openPreferences:" target="-1" id="r5m-eT-pc6"/>
                                                                    </connections>
                                                                </button>
                                                            </subviews>
                                                            <constraints>
...
